Bug 116467 - All opened SVG files are shown as blank
Summary: All opened SVG files are shown as blank
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: highest critical
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: FastParser-regressions SVG-Open
  Show dependency treegraph
 
Reported: 2018-03-18 11:49 UTC by Buovjaga
Modified: 2022-09-30 12:22 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Screenshot comparing 6.1 and 6.0.2 (59.96 KB, image/png)
2018-03-19 13:48 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2018-03-18 11:49:09 UTC
Drag attachment 79143 [details] or any SVG file (f.ex. from meta bug 88278) to LibreOffice to see it is blank! The horror!

Arch Linux 64-bit
Version: 6.1.0.0.alpha0+
Build ID: 070dbae6b4dc497d6ae898e60203d25b0e608d73
CPU threads: 8; OS: Linux 4.15; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on March 17th 2018

Version: 6.1.0.0.alpha0+ (x64)
Build ID: 3677ca53c60304830285233474466de3272ec183
CPU threads: 4; OS: Windows 10.0; UI render: default; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-03-18_01:31:20
Locale: fi-FI (fi_FI); Calc: group
Comment 1 Xavier Van Wijmeersch 2018-03-18 13:17:26 UTC
confirm with

Version: 6.1.0.0.alpha0+
Build ID: 070dbae6b4dc497d6ae898e60203d25b0e608d73
CPU threads: 8; OS: Linux 4.14; UI render: default; VCL: gtk3; 
Locale: nl-BE (en_US.UTF-8); Calc: group

Version: 6.1.0.0.alpha0+
Build ID: 359f2035bcef41eef027580b22529f5bdb5f96d2
CPU threads: 8; OS: Linux 4.14; UI render: default; VCL: kde4; 
Locale: nl-BE (en_US.UTF-8); Calc: group
Comment 2 Regina Henschel 2018-03-18 13:47:00 UTC
It is OK in Version: 6.0.1.1 (x64)
Build ID: 60bfb1526849283ce2491346ed2aa51c465abfe6
CPU threads: 8; OS: Windows 10.0; UI render: default; 
Locale: de-DE (de_DE); Calc: CL
Comment 3 V Stuart Foote 2018-03-18 15:01:23 UTC
Confirmed on Windows 10 Home 64-bit en-US (ver 1709 16299.309) with
Version: 6.1.0.0.alpha0+ (x64)
Build ID: 3677ca53c60304830285233474466de3272ec183
CPU threads: 4; OS: Windows 10.0; UI render: GL; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-03-18_01:31:20
Locale: en-US (en_US); Calc: CL

Not only will opening an SVG not render to canvas, but various icons in the GUI are being corrupted. Also the start up Splash screen is rendered as a rough grayscale image during launch.
Comment 4 V Stuart Foote 2018-03-18 15:21:31 UTC
(In reply to V Stuart Foote from comment #3)
The same system is OK with the 2018-03-14 build, so recent regression...

Version: 6.1.0.0.alpha0+ (x64)
Build ID: 8e8dd8f320a3ff59ff8a16c1a7a867888ce80700
CPU threads: 4; OS: Windows 10.0; UI render: GL; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-03-14_01:42:36
Locale: en-US (en_US); Calc: CL
Comment 5 V Stuart Foote 2018-03-18 15:52:13 UTC
https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=2537d6897ae516d3b4d50f0e2885dc24949841bf..1990fc47bb561fcb9f98cbdcb7f986b93a54b876

Could probably be resolved further, but that range includes some of Noel's rework of the Cairo handling...

=-bibisect-=

Good through
Build ID: 2537d6897ae516d3b4d50f0e2885dc24949841bf
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-03-16_02:34:17

First bad
Build ID: 1990fc47bb561fcb9f98cbdcb7f986b93a54b876
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-03-17_04:34:36
Comment 6 Telesto 2018-03-19 07:26:35 UTC
> Also the start up Splash screen is rendered as a rough grayscale image during launch. --> bug 116213
Comment 7 Noel Grandin 2018-03-19 12:48:17 UTC
this seems to be working for me, as of commit

  commit 62275a93e3b13a20aa1de7945a32a0d25582c1ca
  Date:   Fri Mar 16 15:30:43 2018 +0200

??

(tested on 64-bit Linux, Ubuntu 16.04)
Comment 8 V Stuart Foote 2018-03-19 13:01:37 UTC
(In reply to Noel Grandin from comment #7)
> this seems to be working for me, as of commit
> 
>   commit 62275a93e3b13a20aa1de7945a32a0d25582c1ca
>   Date:   Fri Mar 16 15:30:43 2018 +0200
> 
> ??
> 
> (tested on 64-bit Linux, Ubuntu 16.04)

Chris's work on bitmap scanline sizes being 32-bit aligned also fell in this range. And in fact, disabling OpenGL rendering on Windows builds removes the glitch.
Comment 9 Buovjaga 2018-03-19 13:06:00 UTC
(In reply to V Stuart Foote from comment #8)
> (In reply to Noel Grandin from comment #7)
> > this seems to be working for me, as of commit
> > 
> >   commit 62275a93e3b13a20aa1de7945a32a0d25582c1ca
> >   Date:   Fri Mar 16 15:30:43 2018 +0200
> > 
> > ??
> > 
> > (tested on 64-bit Linux, Ubuntu 16.04)
> 
> Chris's work on bitmap scanline sizes being 32-bit aligned also fell in this
> range. And in fact, disabling OpenGL rendering on Windows builds removes the
> glitch.

No, my original report included Win without OpenGL.
Comment 10 V Stuart Foote 2018-03-19 13:30:35 UTC
(In reply to Buovjaga from comment #9)
> (In reply to V Stuart Foote from comment #8)
> 
> No, my original report included Win without OpenGL.

Hmm, toggling OpenGL enabled and disabled on TB42 builds from the 17th, 18th and today is controlling the glitch. Sure seems to be OpenGL dependent, and splash screen, toolbar icon, and document thumbnail "smearing" does not manifest with HA or CPU only default rendering.

Images that are smeared show grayscale, and slant--so look off by 1 in stacking a raster.
Comment 11 Buovjaga 2018-03-19 13:48:20 UTC
Created attachment 140708 [details]
Screenshot comparing 6.1 and 6.0.2
Comment 12 V Stuart Foote 2018-03-19 13:50:06 UTC
Ouch! While corruption of the icon, thumbnail, and splash screen respond to OpenGL state--actually _opening_ an SVG image results in the blank. Exactly the issue of OP! 

Strangely _inserting_ the same SVG into a document works correctly.

Sorry--Buovjaga!
Comment 13 Regina Henschel 2018-03-19 14:54:12 UTC
(In reply to V Stuart Foote from comment #12)
> Strangely _inserting_ the same SVG into a document works correctly.

That is not strangely, opening uses the old filter and inserting uses the new svgio.
Comment 14 V Stuart Foote 2018-03-19 17:17:15 UTC
Could we tighten up the bibisect and bisect the failure of SVG to Open to canvas? 

The icons, splashscreen, and thumbnail previews are bug 116484, and relate to Chris's work on bug 116213. SVG opening blank on canvas is probably a different, possibly unrelated, issue.
Comment 15 Xisco Faulí 2018-03-19 18:05:35 UTC
Regression introduced by:

author	Mohammed Abdul Azeem <azeemmysore@gmail.com>	2017-10-01 14:11:11 +0530
committer	Michael Meeks <michael.meeks@collabora.com>	2018-03-14 14:12:08 +0100
commit bf46b46a1d734348096936284fb8a76e977936d0 (patch)
tree a76c30897cf1e49491bf26580c823701b6d74778
parent 1b61d0417bf46896ef1f1bd1e1a8209588fc157a (diff)
Moving XSAXDocumentBuilder2 to use XFastDocumentHandler:
This is used in parsing of meta Contexts across different
modules. This also involved moving to XFastParser for
parsing xml filters in sw, sd, starmath.

Bisected with: bibisect-linux64-6.1

Adding Cc: to Mohammed Abdul Azeem
Comment 16 Michael Meeks 2018-03-22 15:51:15 UTC
Tested with the other crash fix included, and this is still reproducible; any ideas Azorpid ? =)
Comment 17 Commit Notification 2018-03-26 08:05:21 UTC
Mohammed Abdul Azeem committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d5903802e2c40d6fccbc322c49b5f9a311551b9b

tdf#116467: fix for SVG files being imported as blank

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Michael Meeks 2018-03-26 08:13:14 UTC
Fixed thanks to Mohammed.
Comment 19 Buovjaga 2018-03-26 09:21:26 UTC
Verified.

Arch Linux 64-bit
Version: 6.1.0.0.alpha0+
Build ID: add7a962bc33b3c1f2252a9920bebf324df688de
CPU threads: 8; OS: Linux 4.15; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on March 26th 2018