tdf#116467: fix for SVG files being imported as blank

Any SAX-to-SAX transformation, like in this case should
use SvXMLLegacyToFastDocHandler on the left end, as right
end of the pipe is moved to fast Contexts.

Used delegating constructor here, since m_xDocumentHandler
is constant in SVGReader class.

Change-Id: I1fc841c96aaa618f0b566fdb0301ad48fd869f1c